<resources>
    <string name="app_name">Beer Friends</string>
    <string name="navigation_drawer_open">Abre o menu lateral</string>
    <string name="navigation_drawer_close">Fecha o meu lateral</string>
    <string name="nav_header_title">Fulano da Silva</string>
    <string name="nav_header_subtitle">fulano.silva@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="menu_friends">Lista de Amigos</string>
    <string name="menu_profile">Editar Perfil</string>
    <string name="menu_add_friend">Adicionar Amigo</string>
    <string name="title_add_friend">Informações do Amigo</string>
    <string name="username_hint">Nome Completo</string>
    <string name="email_hint">E-email</string>
    <string name="phone_hint">Telefone</string>
    <string name="website_hint">Site</string>
    <string name="save_button">Salvar</string>
    <string name="title_profile">Informações do Usuário</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="next">Próximo</string>
    <string name="skip">Pular</string>
    <string name="get_started">Quero &#x261D; caneca</string>
</resources>