<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_friend_list">

    <fragment
        android:id="@+id/nav_friend_list"
        android:name="br.com.beerfriends.view.fragments.FriendListFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friend_list" />

    <fragment
        android:id="@+id/nav_profile_edit"
        android:name="br.com.beerfriends.view.fragments.ProfileEditFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile_edit" />

    <fragment
        android:id="@+id/nav_add_friend"
        android:name="br.com.beerfriends.view.fragments.AddFriendFragment"
        android:label="@string/menu_add_friend"
        tools:layout="@layout/fragment_add_friend" />
</navigation>