<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="user"
            type="br.com.beerfriends.model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/root">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:layout_height="240dp">

            <ImageView
                android:id="@+id/cp_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="0dp"
                android:src="@drawable/barril" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/title_profile"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:text="@{user.name}"
                android:inputType="textCapWords"
                android:layout_marginBottom="18dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:text="@{user.email}"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="18dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/save_button"
                    android:backgroundTint="@color/secondary"
                    android:layout_gravity="bottom"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>